--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -13,11 +13,15 @@ body {
     background-color: #1a1a1a;
 }
 
-#root {
-    min-height: 100dvh;
+.main-content {
+    min-height: calc(100dvh - 4.5rem);
     display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
-.container {
-    margin: auto;
+.keyboard-container { 
+    overflow-x: auto;
+    margin-bottom: 3rem;
 }
+
