--- a/src/components/key/key.scss
+++ b/src/components/key/key.scss
@@ -1,13 +1,13 @@
 .key {
-    height: 3.7rem;
     min-width: 3.7rem;
-    padding: 0.75rem 0.5rem;
+    padding: 0.5rem 0.5rem;
     border-radius: 0.15em;
     background-color: #2e2e2e;
     user-select: none;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    gap: 0.3rem;
+    position: relative;
 
     &_centered {
         .key__label {
@@ -18,12 +18,6 @@
 
     &_wide {
         flex-grow: 1;
-    }
-
-    &_small-text {
-        .key__label {
-            font-size: 0.9rem;
-        }
     }
 
     &_pressed {
@@ -45,7 +39,7 @@
     }
 
     &__label {
-        font-size: 1.25rem;
+        font-size: 1.15rem;
         width: 100%;
 
         img {
@@ -58,6 +52,11 @@
         &_secondary {
             align-self: flex-end;
             color: #a9a9a9;
+            width: auto;
+        }
+
+        &_small-text {
+            font-size: 0.9rem;
         }
     }
 }
