--- a/src/components/keyboard/keyboard.scss
+++ b/src/components/keyboard/keyboard.scss
@@ -4,6 +4,28 @@
     width: fit-content;
     margin: 0 auto;
     padding: 0 0 0.5rem;
+
+    &__numpad {
+        display: grid;
+        grid-template-columns: repeat(4, 3.7rem);
+        grid-template-rows: repeat(5, 3.7rem);
+        gap: 0.4rem;
+
+        .key:nth-child(8){
+            grid-row: 2/4;
+            grid-column: -2/-1;
+        }
+
+        .key:nth-child(15){
+            grid-row: -1/-3;
+            grid-column: -2/-1;
+        }
+
+        .key:nth-child(16){
+            grid-row: -1/-2;
+            grid-column: 1/3;
+        }
+    }
     
     &__section {
         display: flex;
@@ -29,9 +51,9 @@
 .function-keys {
     display: flex;
     gap: 1.75rem;
-    
+
     .key__label {
-        font-size: 1.25rem;
+        font-size: 1.15rem;
     }
 
     &__group {
