--- a/src/components/app/app.scss
+++ b/src/components/app/app.scss
@@ -13,12 +13,34 @@ body {
     background-color: #1a1a1a;
 }
 
+#root {
+    min-height: 100dvh;
+    display: flex;
+    flex-direction: column;
+}
+
+main {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+footer {
+    margin-top: 5px;
+    color: #FFFFFF;
+    background-color: #2e2e2e;
+    box-shadow: 0px 0px 5px #000000;
+    padding: 1rem;
+}
+
 .main-content {
-    min-height: calc(100dvh - 4.5rem);
+    flex-grow: 1;
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
+
+
 
 .keyboard-container { 
     overflow-x: auto;
